[project]
name = "comfyui-list-utils"
description = "Comfy List and Python list (PyList) utilities which support: create, merge, convert, get or slice"
version = "2.0.0"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/godmt/ComfyUI-List-Utils"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "godmt"
DisplayName = "ComfyUI-List-Utils"
Icon = ""
