[project]
name = "comfyui-list-utils"
description = "Primitive ComfyUI custom nodes for working with ComfyUI List processing, raw Python list values, and typed value bundles."
version = "2.1.0"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/godmt/ComfyUI-List-Utils"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "godmt"
DisplayName = "ComfyUI-List-Utils"
Icon = ""
